--- a/index.html
+++ b/index.html
@@ -49,8 +49,6 @@
     <h2>Trainings & Programs</h2>
     <ul>
       <li>Alliance Low Code Training Program</li>
-      <li>Advanced React and Vue Workshops - 2023</li>
-      <li>Cloud Computing & DevOps Certification - 2023</li>
     </ul>
   </section>
 
@@ -65,7 +63,7 @@
     <h2>Contacts</h2>
     <div class="contact-item">
       <i class="fas fa-envelope"></i>
-      <a href="mailto:fedillaga.pmds2023@gmail.com" aria-label="Email">fedillaga.pmds2023@gmail.com</a>
+      <a href="fedillaga.pmds2023@gmail.com" aria-label="Email">fedillaga.pmds2023@gmail.com</a>
     </div>
     <div class="contact-item">
       <i class="fas fa-phone"></i>
