--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
     <h2>Contacts</h2>
     <div class="contact-item">
       <i class="fas fa-envelope"></i>
-      <a href="fedillaga.pmds2023@gmail.com" aria-label="Email">fedillaga.pmds2023@gmail.com</a>
+      <a href="fedillaga.pmds2023@gmail.com" aria-label="Email">Email: fedillaga.pmds2023@gmail.com</a>
     </div>
     <div class="contact-item">
       <i class="fas fa-phone"></i>
-      <span aria-label="Mobile Number">0994 584 5836</span>
+      <span aria-label="Mobile Number">Contact Number: 0994 584 5836</span>
     </div>
   </section>
 
