--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <section id="profile" tabindex="-1" aria-label="Profile section">
     <img src="karl.jpg" alt="Profile picture of Karl James" loading="lazy"  />
     <h2>Karl James Fedillaga</h2>
-    <p>Hi, I'm a dedicated student, curious learner, and creative thinker with a growing interest in technology.</p>
+    <p>I'm on a journey of growth, turning every challenge into an opportunity to improve</p>
     <p>This portfolio is a reflection of who I am, what I’ve accomplished, and the path I'm pursuing. I’m passionate about technology and always eager to learn and grow.</p>
     <div class="details" aria-label="Personal details">
       <p><strong>Age:</strong> 19</p>
