--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,34 +22,47 @@
 <main class="container" role="main" tabindex="-1">
 
   <section id="profile" tabindex="-1" aria-label="Profile section">
-    <img src="karl.jpg" alt="Profile picture of Karl James" loading="lazy"  />
+    <img src="karl.jpg" alt="Profile picture of Karl James" loading="lazy" />
     <h2>Karl James Fedillaga</h2>
     <p>I'm on a journey of growth, turning every challenge into an opportunity to improve.</p>
     <p>This portfolio is a reflection of who I am, what I’ve accomplished, and the path I'm pursuing. I’m passionate about technology and always eager to learn and grow.</p>
     <div class="details" aria-label="Personal details">
+      <h2>Profile</h2>
       <p><strong>Age:</strong> 19</p>
       <p><strong>Address:</strong> Ponduhan, Upper Becceril, Boljoon, Cebu</p>
       <p><strong>Gender:</strong> Male</p>
       <p><strong>Religion:</strong> Roman Catholic</p>
       <p><strong>Civil Status:</strong> Single</p>
-      <p><strong>Height:</strong> 5'6"</p>
+      <p><strong>Height:</strong> 5'6</p>
       <p><strong>Weight:</strong> 54 kg</p>
     </div>
   </section>
 
   <section id="education" tabindex="-1" aria-label="Education section">
-    <h2>Education</h2>
+    <h2>Educational Background</h2>
     <ul>
-      <li><strong>Senior High School - STEM</strong>, Patronage of Mary Development School (2021–2023)</li>
-      <li><strong>Junior High School</strong>, Lunop National High School (2017–2021)</li>
-      <li><strong>Elementary School</strong>, Ponduhan National High School (2012–2017)</li>
+      <li>
+        <img src="pmds.jpg" alt="School Logo" class="school-logo" />
+        <strong>Senior High School - STEM</strong> Patronage of Mary Development School (2021–2023)
+      </li>
+      <li>
+        <img src="lunop.jpg" alt="School Logo" class="school-logo" />
+        <strong>Junior High School</strong>  Lunop National High School (2017–2021)
+      </li>
+      <li>
+        <img src="pondohan logo.jpg" alt="School Logo" class="school-logo" />
+        <strong>Elementary School</strong>  Ponduhan National High School (2012–2017)
+      </li>
     </ul>
   </section>
 
   <section id="trainings" tabindex="-1" aria-label="Trainings and Programs section">
     <h2>Trainings & Programs</h2>
     <ul>
-      <li>Alliance Low Code Training Program</li>
+      <li>
+        <img src="alliancetraining.jpg" alt="Alliance Training" class="school-logo" />
+        Alliance Low Code Training Program
+      </li>
     </ul>
   </section>
 
@@ -63,17 +77,11 @@
     <h2>Contacts</h2>
     <div class="contact-item">
       <i class="fas fa-envelope"></i>
-      <a href="fedillaga.pmds2023@gmail.com" aria-label="Email">Email: fedillaga.pmds2023@gmail.com</a>
+      <a href="mailto:fedillaga.pmds2023@gmail.com" aria-label="Email">Email: fedillaga.pmds2023@gmail.com</a>
     </div>
     <div class="contact-item">
       <i class="fas fa-phone"></i>
       <span aria-label="Mobile Number">Contact Number: 0994 584 5836</span>
-    </div>
-  </section>
-
-</main>
-
-</body>
-<script href="js.js"></script>
-
-</html>
+      </div>
+      </body>
+      </html>
