--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
     <div class="contact-item">
       <i class="fas fa-phone"></i>
       <span aria-label="Mobile Number">Contact Number: 0994 584 5836</span>
-      </div>
+    </div>
+    <div>
+      <span aria-label="Facebook Account">Facebook Account:Karl James Mendez Fedillaga</span>
+    </div>
       </body>
       </html>
