--- a/index.html
+++ b/index.html
@@ -73,6 +73,20 @@
     </ul>
   </section>
 
+  <section id="job-experience" tabindex="-1" aria-label="Job Experience section">
+    <h2>Job Experience</h2>
+    <ul>
+      <li>
+        <strong>Junior IT Support Technician</strong> - ABC Tech Solutions (2022–2023)
+        <p>Provided technical support and troubleshooting for computer hardware and software issues. Assisted in network setup and maintenance.</p>
+      </li>
+      <li>
+        <strong>Intern Web Developer</strong> - XYZ Web Agency (Summer 2021)
+        <p>Developed and maintained client websites using HTML, CSS, and basic JavaScript. Collaborated with the design team to implement responsive layouts.</p>
+      </li>
+    </ul>
+  </section>
+
   <section id="contacts" tabindex="-1" aria-label="Contacts section">
     <h2>Contacts</h2>
     <div class="contact-item">
