--- a/index.html
+++ b/index.html
@@ -77,12 +77,8 @@
     <h2>Job Experience</h2>
     <ul>
       <li>
-        <strong>Junior IT Support Technician</strong> - ABC Tech Solutions (2022–2023)
-        <p>Provided technical support and troubleshooting for computer hardware and software issues. Assisted in network setup and maintenance.</p>
-      </li>
-      <li>
-        <strong>Intern Web Developer</strong> - XYZ Web Agency (Summer 2021)
-        <p>Developed and maintained client websites using HTML, CSS, and basic JavaScript. Collaborated with the design team to implement responsive layouts.</p>
+        <strong>Work Immersion Program</strong> Jaynet Oceanview Resort (2022–2023)
+        <p>I was assigned to the maintenance team at the resort, responsible for cleaning the area and ensuring that the appliances are working properly.</p>
       </li>
     </ul>
   </section>
