--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <h2>Job Experience</h2>
     <ul>
       <li>
-        <strong>Work Immersion Program</strong> Jaynet Oceanview Resort (2022–2023)
+        <strong>Work Immersion Program -  Jaynet Oceanview Resort (2022–2023)</strong>
         <p>I was assigned to the maintenance team at the resort, responsible for cleaning the area and ensuring that the appliances are working properly.</p>
       </li>
     </ul>
