--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <nav class="navbar" role="navigation" aria-label="Primary Navigation">
   <ul>
-    <li><a href="#profile" class="active">Profile</a></li>
+    <li><a href="#profile">Profile</a></li>
     <li><a href="#education">Education</a></li>
     <li><a href="#trainings">Trainings & Programs</a></li>
     <li><a href="#projects">Projects</a></li>
