--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -92,6 +91,10 @@
     <div class="contact-item">
       <i class="fas fa-phone"></i>
       <span aria-label="Mobile Number">Contact Number: 0994 584 5836</span>
+    </div>
+     <div class="contact-item">
+      <i class="fas fa-phone"></i>
+      <span aria-label="Facebook Link">Facebook Link: https://www.facebook.com/share/1DfkbX1RkQ/</span>
     </div>
       </body>
       </html>
