--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <nav class="navbar" role="navigation" aria-label="Primary Navigation">
   <ul>
     <li><a href="#profile">Profile</a></li>
-    <li><a href="#education">Education</a></li>
+    <li><a href="#education">Educational Background</a></li>
     <li><a href="#trainings">Trainings & Programs</a></li>
     <li><a href="#projects">Projects</a></li>
     <li><a href="#contacts">Contacts</a></li>
@@ -26,7 +26,7 @@
     <p>I'm on a journey of growth, turning every challenge into an opportunity to improve.</p>
     <p>This portfolio is a reflection of who I am, what I’ve accomplished, and the path I'm pursuing. I’m passionate about technology and always eager to learn and grow.</p>
     <div class="details" aria-label="Personal details">
-      <h2>Profile</h2>
+      <h2>My Profile</h2>
       <p><strong>Age:</strong> 19</p>
       <p><strong>Address:</strong> Ponduhan, Upper Becceril, Boljoon, Cebu</p>
       <p><strong>Gender:</strong> Male</p>
