--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
     <h2>Educational Background</h2>
     <ul>
       <li>
-        <img src="pmds.jpg" alt="School Logo" class="school-logo" />
+        <img src="assets/pmds.jpg" alt="School Logo" class="school-logo" />
         <strong>Senior High School - STEM</strong> Patronage of Mary Development School (2021–2023)
       </li>
       <li>
-        <img src="lunop.jpg" alt="School Logo" class="school-logo" />
+        <img src="assets/lunop.jpg" alt="School Logo" class="school-logo" />
         <strong>Junior High School</strong> Lunop National High School (2017–2021)
       </li>
       <li>
-        <img src="pondohan logo.jpg" alt="School Logo" class="school-logo" />
+        <img src="assets/pondohan logo.jpg" alt="School Logo" class="school-logo" />
         <strong>Elementary School</strong> Ponduhan National High School (2012–2017)
       </li>
     </ul>
@@ -91,7 +91,7 @@
     <h2>Trainings & Programs</h2>
     <ul>
       <li>
-        <img src="alliancetraining.jpg" alt="Alliance Training" class="school-logo" />
+        <img src="assets/alliancetraining.jpg" alt="Alliance Training" class="school-logo" />
         <div class="training-details">
           <span class="training-title">Alliance Low Code Training Program</span>
           <span class="training-org">Organized by Alliance Software Inc.</span>
@@ -114,7 +114,7 @@
     <h2>Job Experience</h2>
     <ul>
       <li class="job-card">
-        <img src="workimmersion.jpg" alt="Work Immersion Photo" class="job-photo" />
+        <img src="assets/workimmersion.jpg" alt="Work Immersion Photo" class="job-photo" />
         <div class="job-details">
           <strong>Work Immersion Program - Jaynet Oceanview Resort (2022–2023)</strong>
           <p>
