--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <h2>Job Experience</h2>
     <ul>
       <li class="job-card">
-        <img src="assets/workimmersion.jpg" alt="Work Immersion Photo" class="job-photo" />
+        <img src="assets/workimmersion.jfif" alt="Work Immersion Photo" class="job-photo" />
         <div class="job-details">
           <strong>Work Immersion Program - Jaynet Oceanview Resort (2022–2023)</strong>
           <p>
