--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <strong>Senior High School - STEM</strong> Patronage of Mary Development School (2021–2023)
       </li>
       <li>
-        <img src="assets/lunop.jpg" alt="School Logo" class="school-logo" />
+        <img src="assets/lunop.jfif" alt="School Logo" class="school-logo" />
         <strong>Junior High School</strong> Lunop National High School (2017–2021)
       </li>
       <li>
