--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
     <h2>Educational Background</h2>
     <ul>
       <li>
+        <img src="cite.jfif" alt="School Logo" class="school-logo" />
+        <strong>Senior High School - STEM</strong> Patronage of Mary Development School (2021–2023)
+      </li>
+      <li>
         <img src="assets/pmds.jpg" alt="School Logo" class="school-logo" />
         <strong>Senior High School - STEM</strong> Patronage of Mary Development School (2021–2023)
       </li>
