--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <ul>
       <li>
         <img src="cite.jfif" alt="School Logo" class="school-logo" />
-        <strong>Senior High School - STEM</strong> Patronage of Mary Development School (2021–2023)
+        <strong>Diploma in Computer Engineering</strong> Cite Technical Institute Inc.(2023–present)
       </li>
       <li>
         <img src="assets/pmds.jpg" alt="School Logo" class="school-logo" />
