--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <h2>Educational Background</h2>
     <ul>
       <li>
-        <img src="cite.jfif" alt="School Logo" class="school-logo" />
+        <img src="assets/cite.png" alt="School Logo" class="school-logo" />
         <strong>Diploma in Computer Engineering</strong> Cite Technical Institute Inc.(2023–present)
       </li>
       <li>
